--- a/hasancanmiditr.html
+++ b/hasancanmiditr.html
@@ -183,7 +183,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Araba Kiralama Projesi</h5>
                                 <p class="card-text">The projects where we received training on C#, Layered
@@ -203,7 +203,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/tobeto2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Tobeto Projesi</h5>
                                 <p class="card-text">Tobeto eğitim kurumunun web sitesinin Back-End ve Front-End'ini
@@ -243,7 +243,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Oyun Projesi</h5>
                                 <p class="card-text">Engin demiroğ'un ekibinden C#, Katmanlı Mimari, .Net ,Linq ve React
@@ -263,7 +263,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Deressa Güzellik Salonu</h5>
                                 <p class="card-text">Henüz Başlamadı...</p>
@@ -283,7 +283,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/ecommarce.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">E Ticaret Projesi</h5>
                                 <p class="card-text">Engin demiroğ'un ekibinden C#, Katmanlı Mimari, .Net ,Linq ve React
@@ -303,7 +303,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/ecommarce2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">E-Ticaret Projesi 2</h5>
                                 <p class="card-text">Engin demiroğ'un ekibinden C#, Katmanlı Mimari, .Net ,Linq ve React
@@ -334,7 +334,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="databasenormalisation.png" class="card-img-top" alt="...">
+                            <img src="images/databasenormalisation.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Veritabanında Normalizasyon: Neden ve Nasıl ?</h5>
                                 <p class="card-text">Veritabanı normalizasyonu, veritabanlarındaki verileri daha verimli ve etkili bir şekilde depolamak ve yönetmek için kullanılan bir süreçtir...</p>
