--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="favicon-96x96.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon-96x96.png">
     <title>Hasan Can Midi</title>
 </head>
 
@@ -185,7 +185,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Rent a Car Project</h5>
                                 <p class="card-text">The projects where we received training on C#, Layered
@@ -205,7 +205,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/tobeto2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Tobeto Project</h5>
                                 <p class="card-text">We are developing the website for Tobeto educational institution
@@ -245,7 +245,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Game Project</h5>
                                 <p class="card-text">The projects where we received training on C#, Layered
@@ -265,7 +265,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Deressa Beauty Salon</h5>
                                 <p class="card-text">Not started yet...</p>
@@ -285,7 +285,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/ecommarce.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">E-Commerce Project</h5>
                                 <p class="card-text">The projects where we received training on C#, Layered
@@ -305,7 +305,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/ecommarce2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">E-Commerce Project 2</h5>
                                 <p class="card-text">The projects where we received training on C#, Layered
@@ -336,7 +336,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="databasenormalisation.png" class="card-img-top" alt="...">
+                            <img src="images/databasenormalisation.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Database Normalization: Why and How (Turkish)</h5>
                                 <p class="card-text">Database normalization is a process used to store and manage data in databases more efficiently and effectively...</p>
