--- a/hasancanmiditr.html
+++ b/hasancanmiditr.html
@@ -183,7 +183,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/rentacar2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Araba Kiralama Projesi</h5>
                                 <p class="card-text">The projects where we received training on C#, Layered
@@ -203,7 +203,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="images/tobeto2.png" class="card-img-top" alt="...">
+                            <img src="images/tobeto1.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Tobeto Projesi</h5>
                                 <p class="card-text">Tobeto eğitim kurumunun web sitesinin Back-End ve Front-End'ini
@@ -243,7 +243,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/game2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Oyun Projesi</h5>
                                 <p class="card-text">Engin demiroğ'un ekibinden C#, Katmanlı Mimari, .Net ,Linq ve React
@@ -263,7 +263,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/beauty.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Deressa Güzellik Salonu</h5>
                                 <p class="card-text">Henüz Başlamadı...</p>
