--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/rentacar2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Rent a Car Project</h5>
                                 <p class="card-text">The projects where we received training on C#, Layered
@@ -205,7 +205,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="images/tobeto2.png" class="card-img-top" alt="...">
+                            <img src="images/tobeto1.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Tobeto Project</h5>
                                 <p class="card-text">We are developing the website for Tobeto educational institution
@@ -245,7 +245,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/game2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Game Project</h5>
                                 <p class="card-text">The projects where we received training on C#, Layered
@@ -265,7 +265,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card mb-3 card-project">
-                            <img src="images/github-wallpaper-scaled.webp" class="card-img-top" alt="...">
+                            <img src="images/beauty.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Deressa Beauty Salon</h5>
                                 <p class="card-text">Not started yet...</p>
