--- a/hasancanmiditr.html
+++ b/hasancanmiditr.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style/style.css">
     <link rel="icon" type="image/x-icon" href="favicon-96x96.png">
     <title>Hasan Can Midi</title>
 </head>
@@ -152,14 +152,17 @@
         <div>
             <ul class="list-unstyled">
                 <li class="mt-2"><a class=""
-                        href="https://www.btkakademi.gov.tr/portal/certificate/validate?certificateId=AJaSjr0m0">Javascript
+                    href="https://verified.sertifier.com/tr/verify/78255336897836/?ref=email" target="_blank">Front-End Geliştirme
+                    <strong>Kodluyoruz</strong></a></li>
+                <li class="mt-2"><a class=""
+                        href="https://www.btkakademi.gov.tr/portal/certificate/validate?certificateId=AJaSjr0m0"  target="_blank">Javascript
                         <strong>BTK AKADEMİ</strong></a></li>
                 <li class="mt-2"><a class="" href="https://www.btkakademi.gov.tr/portal/certificate/validate?
-                certificateId=8jmhLkVmDo">Intermediate Level English <strong>BTK AKADEMİ</strong></a></li>
+                certificateId=8jmhLkVmDo">Intermediate Level English <strong>BTK AKADEMİ</strong  target="_blank"></a></li>
                 <li class="mt-2"><a class="" href="https://lms.tobeto.com/tobeto/eep/certificate_show_3.aspx?
                 encQS=Wd47S1O2wFDMULiDhVqp991jtD9OcxkR5Pa+gbGIOxHwW/
                 9C17BGKQEYvKXlIJjKLCssOmK+6zNoD7QqBl4oDevV2NG2Ciq9Qv9aUICgazb3TpdtiM9XNH
-                prl9pyL1wxmvzXLd/ILH3Lqzr5ZXMaiUeJ+8ZDoQ6M850ZLX1oFrE=">Herkes İçin Kodlama <strong>TOBETO</strong></a>
+                prl9pyL1wxmvzXLd/ILH3Lqzr5ZXMaiUeJ+8ZDoQ6M850ZLX1oFrE="  target="_blank">Herkes İçin Kodlama <strong>TOBETO</strong></a>
                 </li>
                 <li></li>
             </ul>
@@ -340,6 +343,26 @@
                                 <p class="card-text">Veritabanı normalizasyonu, veritabanlarındaki verileri daha verimli ve etkili bir şekilde depolamak ve yönetmek için kullanılan bir süreçtir...</p>
                                 <p class="card-text"><small class="text-body-secondary"><a
                                             href="https://medium.com/@hasancanmidi/veritaban%C4%B1-normalizasyonu-neden-ve-nas%C4%B1l-853b26415312" target="_blank">Medium Linki  <i class="bi bi-medium"></i></a></small></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="images/database3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Veritabanına Giriş</h5>
+                                <p class="card-text">"Select" komutu, veritabanından veri çekmek için kullanılan temel SQL komutu olarak tanıtılıyor...</p>
+                                <p class="card-text"><small class="text-body-secondary">Yakında...</small></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="images/react.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">React'a Giriş - Modern Web Uygulamalarının Yapı Taşı</h5>
+                                <p class="card-text">React'a Giriş: Modern web geliştirmenin temellerini keşfedin. Bu kapsamlı rehberle interaktif kullanıcı arayüzleri oluşturmayı öğrenin!</p>
+                                <p class="card-text"><small class="text-body-secondary">Yakında...</small></p>
                             </div>
                         </div>
                     </div>
