--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style/style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon-96x96.png">
     <title>Hasan Can Midi</title>
 </head>
@@ -154,14 +154,17 @@
         <div>
             <ul class="list-unstyled">
                 <li class="mt-2"><a class=""
-                        href="https://www.btkakademi.gov.tr/portal/certificate/validate?certificateId=AJaSjr0m0">Javascript
+                    href="https://verified.sertifier.com/tr/verify/78255336897836/?ref=email" target="_blank">Front-End Development
+                    <strong>Kodluyoruz</strong></a></li>
+                <li class="mt-2"><a class=""
+                        href="https://www.btkakademi.gov.tr/portal/certificate/validate?certificateId=AJaSjr0m0" target="_blank">Javascript
                         <strong>BTK ACADEMY</strong></a></li>
                 <li class="mt-2"><a class="" href="https://www.btkakademi.gov.tr/portal/certificate/validate?
-                certificateId=8jmhLkVmDo">Intermediate Level English <strong>BTK ACADEMY</strong></a></li>
+                certificateId=8jmhLkVmDo" target="_blank">Intermediate Level English <strong>BTK ACADEMY</strong></a></li>
                 <li class="mt-2"><a class="" href="https://lms.tobeto.com/tobeto/eep/certificate_show_3.aspx?
                 encQS=Wd47S1O2wFDMULiDhVqp991jtD9OcxkR5Pa+gbGIOxHwW/
                 9C17BGKQEYvKXlIJjKLCssOmK+6zNoD7QqBl4oDevV2NG2Ciq9Qv9aUICgazb3TpdtiM9XNH
-                prl9pyL1wxmvzXLd/ILH3Lqzr5ZXMaiUeJ+8ZDoQ6M850ZLX1oFrE=">Herkes İçin Kodlama <strong>TOBETO</strong></a>
+                prl9pyL1wxmvzXLd/ILH3Lqzr5ZXMaiUeJ+8ZDoQ6M850ZLX1oFrE=" target="_blank">Herkes İçin Kodlama <strong>TOBETO</strong></a>
                 </li>
                 <li></li>
             </ul>
@@ -178,6 +181,7 @@
         <p class="fw-bolder mt-5 fs-4">GITHUB <i class="bi bi-github"></i></p>
         <img class="github" src="http://ghchart.rshah.org/hasancanmidi" style="width: 80%; height: 5%;"
             alt="hasancanmidi's Github chart" />
+
         <p class="fw-bolder mt-5 fs-4">PROJECTS</p>
 
         <div class="container text-center ">
@@ -342,6 +346,26 @@
                                 <p class="card-text">Database normalization is a process used to store and manage data in databases more efficiently and effectively...</p>
                                 <p class="card-text"><small class="text-body-secondary"><a
                                             href="https://medium.com/@hasancanmidi/veritaban%C4%B1-normalizasyonu-neden-ve-nas%C4%B1l-853b26415312" target="_blank">Medium Linki  <i class="bi bi-medium"></i></a></small></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="images/database3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Entry Level Database(Turkish)</h5>
+                                <p class="card-text">The 'Select' command is introduced as the fundamental SQL command used to retrieve data from a database...</p>
+                                <p class="card-text"><small class="text-body-secondary">Coming Soon...</small></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card mb-3 card-project">
+                            <img src="images/react.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Introduction to React - The Building Block of Modern Web Applicationsı</h5>
+                                <p class="card-text">Introduction to React: Discover the essentials of modern web development. Learn to build interactive user interfaces with this comprehensive guide!</p>
+                                <p class="card-text"><small class="text-body-secondary">Coming Soon...</small></p>
                             </div>
                         </div>
                     </div>
