--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
         <p class="fw-bolder mt-5 fs-4">GITHUB <i class="bi bi-github"></i></p>
         <img class="github" src="http://ghchart.rshah.org/hasancanmidi" style="width: 80%; height: 5%;"
             alt="hasancanmidi's Github chart" />
+        
+        <p class="fw-bolder mt-5 fs-4">CV</p>
+        <a href="CV/Hasan Can Midi CV.pdf" download="hasancanmidi-cv">Download CV</a>
 
         <p class="fw-bolder mt-5 fs-4">PROJECTS</p>
 
